clang/test/CXX/dcl.dcl/dcl.spec/dcl.fct.spec/p4.cpp
// RUN: clang-cc -verify %s
// XFAIL

void f0() {
}

inline void f0(); // expected-error {{function definition cannot preceed inline declaration}}
